jdk17: replace MaxPermSize by MaxMetaspaceSize
as per https://docs.oracle.com/en/java/javase/17/docs/specs/man/java.html#removed-java-options
```
-XX:MaxPermSize=size
Sets the maximum permanent generation space size (in bytes). This option was deprecated in JDK 8 and superseded by the -XX:MaxMetaspaceSize option.
```